post card edit align error fix

--- a/resources/style.css
+++ b/resources/style.css
@@ -637,7 +637,7 @@ body.dark-mode .post-content .summary { color:#ccc; }
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 8px;
+  border-radius: 6px;
 }
 
 
